--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-native": "^0.70.6",
-        "typescript": "^4.9.5",
+        "typescript": "^4.9.5"
     },
     "typesPublisherContentHash": "82abba80a6b36bbad650d69ac31662b25f7b2d1b3cf1ea0bcfc8544d861d6b1a",
     "typeScriptVersion": "3.3"
